[tool.poetry]
name = "goit-bl2-hw2-ak"
version = "0.1.0"
description = ""
authors = ["akysliak <60407830+akysliak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
